# youtube-playlist-conversations-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scraper.py
.claude/: plan-stats.json  settings.json
.claude/hooks/: save-plan.sh  token-savings.md  track-token-savings.py
.claude/session-summaries/: 20251220-061200-data-cleaning-plan.md  20251220-072400-phase-0-1-implementation.md  20251220-075700-sql-query-scripts.md  20251220-142000-phase-0-2-5-completion.md  20251220-incremental-scraper-api-quota-fix.md  20251220-litecli-query-scripts.md  20251220-migration-system.md  20251220-phase-0-2-implementation.md  20251220-phase-0-2-planning.md  20251221-new-video-tracking.md  README.md
artifacts/docs/: custom-videosdb-queries.md  keyword-selection-rationale.md
notebooks/: semantic_cleaning_analysis.ipynb  semantic_cleaning_analysis.py  yt_stats.ipynb
scripts/: apply_semantic_cleaning.py  data_stats.py  export_cleaned_data.py  find_new_videos.py  ingest_csv.py  init_db.py  migrate.py  update_data.py  validate_cleaning.py  view_scraper_history.py
scripts/migrations/: __init__.py  migration_runner.py
scripts/queries/: LITECLI.md  QUICK_START.sh  README.md  channels-litecli.sql  channels.sql  comparison_queries-litecli.sql  comparison_queries.sql  content_stats-litecli.sql  content_stats.sql  cost_analysis-litecli.sql  cost_analysis.sql  data_quality-litecli.sql  data_quality.sql  embedding_progress-litecli.sql  embedding_progress.sql  evaluation_summary-litecli.sql  evaluation_summary.sql  export_reports.sql  (+10 more)
utils/: cleaning.py  import_csv.py  scraper.js
(+28 files in other folders)
