[project]
name = "youtube-playlist-scraper"
version = "0.1.0"
description = "Download YouTube playlist data as CSV"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "litecli>=1.17.0",
    "matplotlib>=3.8.0",
    "nbconvert>=7.0.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "spacy>=3.8.11",
    "typer>=0.20.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scraper"]
